# Kohonen-SOM

./: README.md  environment-setup.sh  kohonen_experimentation.ipynb  kohonen_optimized.py  pyproject.toml
